Use faster toList method.